objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>ETS_Industry_Territory_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ETS Industry Territory User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Industries (ETS Industry Territory User)</relationshipLabel>
        <relationshipName>Industries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HealthCare</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMI_Industry_Territory_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MMI Industry Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Industries</relationshipLabel>
        <relationshipName>Industries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Industry</label>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>